syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/wedo-workflow/wedo";

package github.com.wedo_workflow.wedo.api.v1;

service CloudTaskManageService {
  // Creates a deployment.
  rpc DeploymentCreate(DeploymentCreateRequest) returns (DeploymentCreateResponse) {
    option (google.api.http) = {
      post : "/deployment/create"
      body : "*"
    };
  }
}

message DeploymentCreateRequest {
  string name = 1;
  bytes content = 2;
}

message DeploymentCreateResponse {
  string id = 1;
  string name = 2;
  bytes content = 3;
  google.protobuf.Timestamp timestamp = 4;
}
